--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ google-auth==2.19.0
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.59.0
 Pillow==9.5.0
+pytube==15.0.0
 streamlit==1.22.0
 streamlit-lottie==0.0.3
